--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,11 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [],
+            "allowedCommonJsDependencies": [
+              "lodash",
+              "class-transformer"
+           ]
           },
           "configurations": {
             "production": {
