--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:stg": "ng build -c development",
     "test": "jest --config jest.config.js --collect-coverage",
     "lint": "ng lint",
     "e2e": "ng e2e",
