--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -78,4 +78,4 @@ deploy_staging:
     url: https://${DOMAIN}
   image: projects.ronasit.com:4567/docker/ssh
   script:
-   - rsync -av ./dist/ ec2-user@54.161.122.188:/var/www/ella.ronasit.com/
+   - rsync -av ./dist/ella-admin-angular-fe/ ec2-user@54.161.122.188:/var/www/ella.ronasit.com/
