--- a/angular.json
+++ b/angular.json
@@ -28,13 +28,14 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
               "src/styles.scss"
             ],
             "scripts": [],
             "allowedCommonJsDependencies": [
               "lodash",
               "class-transformer"
-           ]
+            ]
           },
           "configurations": {
             "production": {
