--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~10.2.0",
+    "@angular/cdk": "^10.2.7",
     "@angular/common": "~10.2.0",
     "@angular/compiler": "~10.2.0",
     "@angular/core": "~10.2.0",
     "@angular/forms": "~10.2.0",
+    "@angular/material": "^10.2.7",
     "@angular/platform-browser": "~10.2.0",
     "@angular/platform-browser-dynamic": "~10.2.0",
     "@angular/router": "~10.2.0",
@@ -29,6 +31,8 @@
     "@ngrx/store": "^10.0.0",
     "@ngx-translate/core": "^13.0.0",
     "@ronas-it/angular-common": "^1.0.27",
+    "ag-grid-angular": "^24.1.0",
+    "ag-grid-community": "^24.1.0",
     "luxon": "^1.25.0",
     "ngrx-forms": "^6.1.0",
     "ngx-toastr": "^13.1.0",
