#9: Allow to edit/add users, changing roles

--- a/angular.json
+++ b/angular.json
@@ -35,7 +35,8 @@
             "allowedCommonJsDependencies": [
               "lodash",
               "class-transformer"
-            ]
+            ],
+            "showCircularDependencies": false
           },
           "configurations": {
             "production": {
