--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
     "@ronas-it/angular-common": "^1.0.27",
     "ag-grid-angular": "^24.1.0",
     "ag-grid-community": "^24.1.0",
+    "css-element-queries": "^1.2.3",
     "font-awesome": "^4.7.0",
     "luxon": "^1.25.0",
     "ngrx-forms": "^6.1.0",
+    "ngx-infinite-scroll": "^10.0.1",
     "ngx-toastr": "^13.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
